Fixed: ensure text and placeholder visibility in admin modals (#172)

--- a/styles/scss/_admin.scss
+++ b/styles/scss/_admin.scss
@@ -52,7 +52,7 @@
 
 .modal
   > *
-  :is(input[type='text'], input[type='text']:focus, input[type='text']::placeholder), textarea, textarea:focus, textarea::placeholder {
+  :is(input[type='text'], input[type='text']:focus), textarea, textarea:focus {
   background: white;
   border-radius: 0px;
   color: black !important;
@@ -64,8 +64,10 @@
 .modal > * input[type='text']:focus {
   opacity: 0.8;
 }
-.modal > * input[type='text']:placeholder {
-  opacity: 0.4;
+.modal > * input[type='text']::placeholder,
+.modal > * textarea::placeholder {
+  color: black !important;
+  opacity: 1 !important;
 }
 
 .params {
